# Information-and-Coding

./: .gitignore  README.md
trab1/: README  README.md
trab1/bit_stream/src/: CMakeLists.txt
trab1/part1/: wav_effects.cpp  wav_effects.h  wav_hist.cpp  wav_quant.cpp  wav_quant.h
trab1/part1/sndfile-example/src/: CMakeLists.txt  wav_cmp.cpp  wav_cmp.h  wav_effects.cpp  wav_effects.h  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
trab1/part1/sndfile-example/test/: 16bits  2bits  5bits
trab1/part2/: wav_quant_dec.cpp  wav_quant_enc.cpp
trab1/part2/bit_stream/src/: CMakeLists.txt  output.txt
trab1/part2_3/bit_stream/src/: CMakeLists.txt  wav_dct_dec.cpp  wav_dct_enc.cpp  wav_quant_dec.cpp  wav_quant_enc.cpp
trab1/part3/: wav_dct_dec.cpp  wav_dct_enc.cpp
trab2/: CMakeLists.txt  Makefile  README.md  readme  visualizerAudio.py  visualizerImage.py
trab2/includes/: bitstream.hpp  golomb.hpp
trab2/includes/Part_II/: bitstream.hpp  golomb.hpp
trab2/includes/codec/: audio_codec.hpp  image_codec.hpp  losslessImage.hpp
trab2/includes/part1/: exe1.hpp
trab2/output/: test_aud_Stereo_Adaptive.golomb  test_aud_Stereo_Independent_L1.golomb  test_aud_Stereo_Independent_L2.golomb  test_aud_Stereo_Independent_L3.golomb  test_aud_Stereo_MidSide_L1.golomb  test_aud_Stereo_MidSide_L2.golomb  test_aud_Stereo_MidSide_L3.golomb  test_img_Adaptive.golomb  test_img_Average.golomb  test_img_JPEGLS.golomb  test_img_Left.golomb  test_img_Paeth.golomb
trab2/part1/: exe2.cpp
trab2/part1/Exe1/: exe1.c  extract_channel
trab2/part1/exe2/: Image.cpp  Image.h  Mirror.cpp  Rotate.cpp  imag  main.cpp
trab2/part4/: image_codec.cpp  image_codec.hpp  makefile  test_codec.cpp
trab2/src/: bitstream.cpp  golomb.cpp
trab2/src/Part_I/exe2/: Negative.cpp
trab2/src/Part_II/: bitstream.cpp  golomb.cpp
trab2/src/codec/: audio_codec.cpp  image_codec.cpp  losslessImage.cpp  main.cpp  test_audio_codec.cpp  test_image_codec.cpp
trab2/src/exe2/: Image.cpp  Intensity.cpp  Rotate.cpp
trab2/src/image/: Image.cpp  Intensity.cpp  Mirror.cpp  Negative.cpp  Rotate.cpp  main.cpp
trab2/src/part1/ex1/: exe1.cpp  exe1.hpp
trab2/src/part1/ex2/: Image.cpp  Intensity.cpp  Mirror.cpp  Negative.cpp  Rotate.cpp  main.cpp
trab2/src/part2/: bitstream.cpp  golomb.cpp
trab2bin/: image_effects
trab3/: .gitignore  CMakeLists.txt  Makefile  README.md  byte_frequency_full_analysis.md  safetensors_analysis.py
trab3/docs/: BLOCKWISE_QUANTIZATION.md  REPORT_ANALYSIS.md  file_structure_analysis.txt
trab3/includes/: benchmarker.hpp  compressor.hpp  preprocessor.hpp  safetensors_parser.hpp
trab3/scripts/: quantize_blockwise.py
trab3/src/: benchmarker.cpp  compressor.cpp  main.cpp  preprocessor.cpp  safetensors_parser.cpp
